feat: Add new changes

--- a/index.html
+++ b/index.html
@@ -136,32 +136,32 @@
         }
       }
       ,
-      // {
-      //   background: '',                         // sin fondo
-      //   leftCenter: './images/cloudscenterleft2.webp', // decorativo lateral
-      //   rightCenter: './images/cloudscenterright2.webp',
+      {
+        background: '',                         // sin fondo
+        leftCenter: './images/cloudscenterleft2.webp', // decorativo lateral
+        rightCenter: './images/cloudscenterright2.webp',
 
-      //   stack3: {
-      //     gap: "10px",
-      //     items: [
-      //       // {
-      //       //   kind: "image",
-      //       //   src: "./images/main.webp",
-      //       //   alt: "Imagen principal",
-      //       //   variant: "principal"   // 👈 ocupará ~70% del alto
-      //       // },
-      //       { kind: "image", src: "./images/churchnew.webp", alt: "Cuadrada", variant: "square" },
-      //       {
-      //         kind: "buttonImage",
-      //         src: "./images/mapbutton2.webp",
-      //         alt: "Iglesia",
-      //         variant: "wideText",
-      //         onClick: () => window.open('https://maps.app.goo.gl/mBR7Jz2SZDgZwYuh7', '_blank')
-      //       }
-      //     ]
-      //   }
-      // }
-      // ,
+        stack3: {
+          gap: "10px",
+          items: [
+            // {
+            //   kind: "image",
+            //   src: "./images/main.webp",
+            //   alt: "Imagen principal",
+            //   variant: "principal"   // 👈 ocupará ~70% del alto
+            // },
+            { kind: "image", src: "./images/churchnew.webp", alt: "Cuadrada", variant: "square" },
+            {
+              kind: "buttonImage",
+              src: "./images/mapbutton2.webp",
+              alt: "Iglesia",
+              variant: "wideText",
+              onClick: () => window.open('https://maps.app.goo.gl/Ee4zNsbWSFNMqQL38', '_blank')
+            }
+          ]
+        }
+      }
+      ,
       ,
       {
         background: '',                         // sin fondo
